--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer {
   background: #343a40;
-  box-shadow: 0 0 10px rgba(118, 121, 122, 0.5);
+  box-shadow: 0 -2px 10px rgba(118, 121, 122, 0.5);
   color: whitesmoke;
 }
 
@@ -71,10 +71,11 @@ input[type="submit"] {
   cursor: pointer;
   border: none;
   color: antiquewhite;
-  background: #fe796a;
+  background: var(--color-main);
   padding: 5px 15px;
+  display: inline-block;
 }
 
 .submit-button:hover {
-  background: #fb9b94;
+  background: var(--color-main-light);
 }
