--- a/css/header.css
+++ b/css/header.css
@@ -20,8 +20,13 @@ header {
 }
 
 #header-logo-img {
-  border-radius: 50%;
-  filter: grayscale(0.8);
+  /* border-radius: 50%; */
+  border-radius: 4px;
+}
+
+#header-logo-img:hover {
+  box-shadow: 2px 2px 10px rgba(158, 157, 157, 0.644);
+  cursor: pointer;
 }
 
 #header-logo-container p {
@@ -50,6 +55,6 @@ a.site-nav-item {
 }
 
 a.site-nav-item:hover {
-  color: #fe796a;
-  border-bottom: 5px solid #fe796a;
+  color: var(--color-main);
+  border-bottom: 5px solid var(--color-main);
 }
