--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,22 @@
 body {
   display: grid;
   grid-template-rows: auto auto 1fr auto;
+  gap: 1rem;
   min-height: 100vh;
   margin: 0 auto;
-  font-family: "Graphic Regular", Arial, Helvetica, sans-serif;
+  font-family: var(--font-regular);
 }
 
 .main-container {
   max-width: 950px;
-  margin: 1rem auto;
+  margin: 0 auto;
 }
 
 .blog-intro {
   display: flex;
   flex-flow: row nowrap;
   margin: 15% 0;
-  color: #343a40;
+  color: var(--main-text-color);
 }
 
 .intro-img {
@@ -33,7 +34,7 @@ body {
 .intro-info h1 {
   font-size: 3rem;
   font-weight: bold;
-  font-family: "Graphic Semibold", Helvetica, Arial, sans-serif;
+  font-family: var(--font-bold);
 }
 
 .intro-info p {
