--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,7 @@ body {
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+  overflow: hidden;
 }
 
 .card-post {
@@ -124,8 +125,16 @@ body {
   transition: 0.5s ease;
 }
 
+.card-post-img {
+  transition: 0.5s ease;
+}
+
 .card-post:hover {
   filter: grayscale(0.7);
+}
+
+.card-post:hover .card-post-img {
+  transform: scale(1.15);
 }
 
 .card-post:hover .card-post-img-link {
